# k-means-mpc

./: .gitignore  CMakeLists.txt  config.cpp  config.h  main.cpp  pailler.cpp  pailler.h  readme.md  secure_proto.cpp  secure_proto.h  server1.cpp  server1.h  server2.cpp  server2.h  transfer.h  tripleRepo.h
DataSet/: async_test  config1.yaml  config2.yaml  data1  data2  gendata.py  gentrriple.py  nlt_test  parse  printgraph.py  read  sandbox  scomp_test  sdiv_test  self_data  smink_test  standard.py
old_proto/: CMakeLists.txt  config.cpp  config.h  main.cpp  old_proto.cpp  old_proto.h  pailler.cpp  sdiv_test.cpp  seccom_test.cpp  server.cpp  server.h  smink_test.cpp  transfer.h
tests/: CMakeLists.txt  asio_test.cpp  async_send_test.cpp  bytesfromzz.cpp  pailler_test.cpp  scomp_test.cpp  sdiv_test.cpp  smink_test.cpp
